[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "igs-app-base"
version = "1.0.0"
description = "Base Django app providing core functionality for iGrowSoft applications"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "RRamirez / IMAGILEX", email = "rramirez@rramirez.com"}
]
keywords = ["django", "app", "igrowsoft", "base"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "Django>=5.1.2",
    "crispy-bootstrap5>=2024.10",
    "django-crispy-forms>=2.3",
    "django-extensions>=3.2.3",
    "django-weasyprint>=2.4.0",
    "PyMySQL>=1.1.1",
    "PyYAML>=6.0.2",
    "uritools>=5.0.0",
    "urllib3>=2.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-django>=4.5",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/imagilex/igs_app_base"
Documentation = "https://github.com/imagilex/igs_app_base"
"Bug Tracker" = "https://github.com/imagilex/igs_app_base/issues"
"Source Code" = "https://github.com/imagilex/igs_app_base"
